<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blqy.scheduledemo.NewScheduleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#202020"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_new_plan"
            android:textColor="#fff"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_choose_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_bnti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_choose_date"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:paddingEnd="20dp"
            android:paddingStart="16dp"
            android:text="@string/tv_bnti"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_choose_date"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/tv_bnti"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_nwrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_nwrs"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/tv_nwrs"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_riqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_riqi"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_riqi"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_uiih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_uiih"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_long"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_uiih"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:maxLength="2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_xnui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/tv_xnui"
            android:textSize="20sp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="结束时间:"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_end"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>
